--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <h1>Formulario de informações pessoais</h1>
-    <input type="text" placeholder="Nome"> 
-    <input type="number" placeholder="Idade">
-    <input type="text" placeholder="CPF">
-    <button>OK</button>
-    <footer>Criado por Rodrigo Everton</footer>
+    <h1 id="titulo">Formulario de informações pessoais</h1>
+    <div class="entradas-formulario">
+        <input type="text" placeholder="Nome"> 
+        <input type="number" placeholder="Idade">
+        <input type="text" placeholder="CPF">
+        <button>OK</button>
+    </div>
+    <footer class="rodape"> Criado por Rodrigo Everton</footer>
 </body>
 </html>
